--- a/src/app/core/layout/nav/nav.component.html
+++ b/src/app/core/layout/nav/nav.component.html
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-light bg-light">
-    <p>nav works!</p>
-    <a routerLink="/cities">cities</a>
-    <a routerLink="/employee">employee</a>
-    <a class="nav-item nav-link" routerLink="/">Home</a>
-    <a class="nav-item nav-link" (click)="logout()">Logout</a>
-</nav>
+<ul class="list-group list-group-flush">
+    <li class="list-group-item"><a routerLink="/content/timesheets">Timesheets</a></li>
+    <li class="list-group-item"><a routerLink="/content/reports">Reports</a></li>
+    <li class="list-group-item">Morbi leo risus</li>
+    <li class="list-group-item">Porta ac consectetur ac</li>
+    <li class="list-group-item">Vestibulum at eros</li>
+</ul>
