--- a/src/app/modules/home/pages/home.component.html
+++ b/src/app/modules/home/pages/home.component.html
@@ -7,7 +7,7 @@
 </div> -->
 
 <p>home.component.html here</p>
-<button (click) ="findAvailableUsername()">find an available username</button> 
+<button (click)="findAvailableUsername()">find an available username</button>
 
 <p>Avaible username is: {{availableUsername}}</p>
 
@@ -15,7 +15,15 @@
 <div>
     <div class="card mt-4">
         <h4 class="card-header">You're logged in with Angular 8 & JWT!!</h4>
-
+        <h4 class="card-header">You're logged in with Angular 8 & JWT!!</h4>
+        <h4 class="card-header">You're logged in with Angular 8 & JWT!!</h4>
+        <h4 class="card-header">You're logged in with Angular 8 & JWT!!</h4>
+        <h4 class="card-header">You're logged in with Angular 8 & JWT!!</h4>
+        <h4 class="card-header">You're logged in with Angular 8 & JWT!!</h4>
+        <h4 class="card-header">You're logged in with Angular 8 & JWT!!</h4>
+        <h4 class="card-header">You're logged in with Angular 8 & JWT!!</h4>
+        <h4 class="card-header">You're logged in with Angular 8 & JWT!!</h4>
+        <h4 class="card-header">You're logged in with Angular 8 & JWT!!</h4>
         <!-- <div class="card-body">
             <h6>Users from secure api end point</h6>
             <div *ngIf="loading" class="spinner-border spinner-border-sm"></div>
