master:F login without backend (interceptor)

--- a/src/app/modules/employee/pages/employee.component.html
+++ b/src/app/modules/employee/pages/employee.component.html
@@ -1,5 +1,7 @@
 <p>employees goes here!</p>
 
+<p *ngIf="availableUsername">{{availableUsername.Username}}</p>
+
 <div *ngFor="let item of employeeList">
     <h4>first name: {{item.employeeFirstName}}</h4>
     <h4>last name: {{item.employeeLastName}}</h4>
