--- a/src/app/core/layout/toolbar/toolbar.component.html
+++ b/src/app/core/layout/toolbar/toolbar.component.html
@@ -1,10 +1,16 @@
-<!-- <nav class="navbar navbar-light bg-light">
-    <a routerLink="/cities">cities</a>
-    <a routerLink="/employee">employee</a>
-    <a class="nav-item nav-link" routerLink="/">Home</a>
-    <a class="nav-item nav-link" (click)="logout()">Logout</a>
-</nav> -->
-<mat-toolbar class="header-align-right">
-    <span>{{currentUser.credentialId}}</span>
-    <a class="nav-item nav-link" (click)="logout()">Logout</a>
-</mat-toolbar>
+<nav class="navbar navbar-dark bg-primary">
+    <span class="navbar-brand mb-0 h1">
+        App
+    </span>
+    <div>
+        <form class="form-inline">
+            <i class="material-icons navbar-brand">
+                account_circle
+            </i>
+            <span class="navbar-brand  mb-0 h4">
+                {{currentUser.firstName}} {{currentUser.lastName}}
+            </span>
+            <button class="btn btn-outline-light" type="button" (click)="logout()">Logout</button>
+        </form>
+    </div>
+</nav>
