--- a/src/app/modules/auth/pages/login/login.component.html
+++ b/src/app/modules/auth/pages/login/login.component.html
@@ -1,7 +1,9 @@
 <div class="col-md-6 offset-md-3 mt-5">
     <div class="alert alert-info">
-        Username: test<br />
-        Password: test
+        Username: A123 Password: master<br />
+        Username: A456 Password: regular<br />
+        Username: A789 Password: lower<br />
+
     </div>
     <div class="card">
         <h4 class="card-header">Angular 8 JWT Login Example</h4>
