--- a/src/app/core/layout/toolbar/toolbar.component.html
+++ b/src/app/core/layout/toolbar/toolbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-dark bg-primary">
     <div>
         <span class="navbar-brand mb-0 h1">
-            App
+            App  -- this is toolbar.component.html
         </span>
         <span class="navbar-text" *ngIf="currentUser">
             {{currentUser.jobTitle}}
@@ -9,11 +9,11 @@
     </div>
     <div *ngIf="currentUser">
         <form class="form-inline">
-            <i class="material-icons navbar-brand">
+            <i class="material-icons navbar-brand" (click) = "goToEmployeePage()">
                 account_circle
             </i>
             <h4 class="navbar-brand  mb-0 h4">
-                {{currentUser.firstName}} {{currentUser.lastName}}
+                test {{currentUser.firstName}} {{currentUser.lastName}}
             </h4>
             <button class="btn btn-outline-light" type="button" (click)="logout()">Logout</button>
         </form>
