--- a/src/app/modules/employee/pages/employee.component.html
+++ b/src/app/modules/employee/pages/employee.component.html
@@ -2,7 +2,6 @@
 
 <p *ngIf="availableUsername">{{availableUsername.Username}}</p>
 
-<div *ngFor="let item of employeeList">
-    <h4>first name: {{item.employeeFirstName}}</h4>
-    <h4>last name: {{item.employeeLastName}}</h4>
-</div>
+<h4>first name: {{employee[employeeFirstName]}}</h4>
+<h4>last name: {{employeeLastName}}</h4>
+
