--- a/src/app/modules/timesheets/pages/timesheets.component.html
+++ b/src/app/modules/timesheets/pages/timesheets.component.html
@@ -1,4 +1,5 @@
 <p>timesheets works!</p>
+<shared-timesheet></shared-timesheet>
 <p>timesheets works!</p>
 <p>timesheets works!</p>
 <p>timesheets works!</p>
