--- a/src/app/modules/timesheets/pages/timesheets.component.html
+++ b/src/app/modules/timesheets/pages/timesheets.component.html
@@ -1,25 +1,9 @@
-<p>timesheets works!</p>
-<shared-timesheet></shared-timesheet>
-<p>timesheets works!</p>
-<p>timesheets works!</p>
-<p>timesheets works!</p>
-<p>timesheets works!</p>
-<p>timesheets works!</p>
-<p>timesheets works!</p>
-<p>timesheets works!</p>
-<p>timesheets works!</p>
-<p>timesheets works!</p>
-<p>timesheets works!</p>
-<p>timesheets works!</p>
-<p>timesheets works!</p>
-<p>timesheets works!</p>
-<p>timesheets works!</p>
-<p>timesheets works!</p>
-<p>timesheets works!</p>
-<p>timesheets works!</p>
-<p>timesheets works!</p>
-<p>timesheets works!</p>
-<p>timesheets works!</p>
-<p>timesheets works!</p>
-<p>timesheets works!</p>
-<p>timesheets works!</p>
+<button type="button" class="btn btn-secondary" routerLink="creation">Create</button>
+<h1>df</h1>
+<h1>df</h1>
+<h1>df</h1>
+<h1>df</h1>
+<h1>df</h1>
+<h1>df</h1>
+<h1>df</h1>
+<h1>df</h1>
