--- a/src/app/modules/timesheets/pages/timesheet-creation/timesheet-creation.component.html
+++ b/src/app/modules/timesheets/pages/timesheet-creation/timesheet-creation.component.html
@@ -14,7 +14,7 @@
         <div class="dropdown-divider my-3"></div>
         <div class="d-flex flex-row-reverse">
             <button type="button" class="btn btn-primary  m-1 px-3" (click)="onSave($event)">Save</button>
-            <button type="button" class="btn btn-primary m-1 px-2" (click)="onSumit($event)">Submit</button>
+            <button type="button" class="btn btn-primary m-1 px-2" (click)="onSubmit($event)">Submit</button>
         </div>
         <div class="dropdown-divider my-3"></div>
     </div>
