employee creation page complete

--- a/src/app/modules/employee/pages/employee.component.html
+++ b/src/app/modules/employee/pages/employee.component.html
@@ -1,7 +1,19 @@
+<button type="button" class="btn btn-secondary" routerLink="creation">Create</button>
+
+
 <p>employees goes here!</p>
 
-<p *ngIf="availableUsername">{{availableUsername.Username}}</p>
+<p> </p>
 
-<h4>first name: {{employee[employeeFirstName]}}</h4>
-<h4>last name: {{employeeLastName}}</h4>
-
+<h4>first name: </h4>
+<h4>last name: </h4>
+<h4>last name: </h4>
+<h4>last name: </h4>
+<h4>last name: </h4>
+<h4>last name: </h4>
+<h4>last name: </h4>
+<h4>last name: </h4>
+<h4>last name: </h4>
+<h4>last name: </h4>
+<h4>last name: </h4>
+<h4>last name: </h4>
