--- a/src/app/core/layout/nav/nav.component.html
+++ b/src/app/core/layout/nav/nav.component.html
@@ -1,4 +1,5 @@
 <ul class="list-group list-group-flush">
+    <li class="list-group-item"><a routerLink="/content/employees">Employees</a></li>
     <li class="list-group-item"><a routerLink="/content/timesheets">Timesheets</a></li>
     <li class="list-group-item"><a routerLink="/content/reports">Reports</a></li>
     <li class="list-group-item">Morbi leo risus</li>
