timesheet bug: not showing fixed

--- a/src/app/modules/timesheets/pages/timesheet-creation/timesheet-creation.component.html
+++ b/src/app/modules/timesheets/pages/timesheet-creation/timesheet-creation.component.html
@@ -1,4 +1,4 @@
-<div class="card mx-1" *ngIf="dataReady()">
+<div class="card mx-1">
     <div class="card-body">
         <h3 class="display-4 mb-3">Create Timesheet</h3>
         <div class="dropdown-divider "></div>
